# husky_master_jazzy

./: .gitmodules  Dockerfile  README.md  build.bash  clearpath_computer_installer.sh  clearpath_computer_installer_working.sh  ouster.repos  run.bash
.ros_docker/log/: latest
.ros_docker/rosdep/sources.cache/: index
clearpath/: robot.yaml  robot.yaml.backup.20250730183135
clearpath/manipulators/config/: moveit.yaml
clearpath/platform/config/: diagnostic_updater.yaml  foxglove_bridge.yaml  teleop_joy.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/brainbox_husky_bringup/share/ament_index/resource_index/parent_prefix_path/: brainbox_husky_bringup
install/brainbox_husky_bringup/share/brainbox_husky_bringup/: package.ps1  package.sh  package.zsh
install/brainbox_husky_bringup/share/brainbox_husky_bringup/config/: ouster_driver_params.yaml
install/brainbox_husky_bringup/share/brainbox_husky_bringup/launch/: brainbox_husky_bringup.launch.py  ouster.launch.py
log/: latest_build
ws/brainbox_husky_bringup/: CMakeLists.txt
ws/brainbox_husky_bringup/config/: ouster_driver_params.yaml  pointcloud_to_laserscan.yaml
ws/brainbox_husky_bringup/launch/: brainbox_husky_bringup.launch.py  relay_topics.launch.py
ws/install/: local_setup.sh  setup.sh
ws/install/brainbox_husky_bringup/share/brainbox_husky_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.sh  package.xml
ws/install/brainbox_husky_bringup/share/brainbox_husky_bringup/cmake/: brainbox_husky_bringupConfig-version.cmake  brainbox_husky_bringupConfig.cmake
ws/install/ouster_ros/share/ouster_ros/: package.bash  package.zsh
ws/install/path_planning/share/path_planning/: local_setup.sh  package.sh
ws/log/: latest_build
ws/path_planning/: CMakeLists.txt
ws/path_planning/config/: ouster_slam_params.yaml
ws/path_planning/launch/: ouster_slam.launch.py  waypoint_click_navigator.launch.py
ws/path_planning/src/: occupancy_grid_node.cpp  pathfinding.cpp  waypoint_click_navigator.py
ws/src/brainbox_husky_bringup/: CMakeLists.txt
ws/src/brainbox_husky_bringup/config/: ublox.yaml
ws/src/brainbox_husky_bringup/launch/: brainbox_husky_bringup.launch.py  ouster.launch.py
ws/src/path_planning/: CMakeLists.txt  package.xml
ws/src/path_planning/src/: occupancy_grid_node.cpp
(+7 files in other folders)
